# realworld-axum-prisma

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yml  justfile
.cargo/: config.toml
conduit/: Cargo.toml
conduit/src/: main.rs
conduit/src/config/: app_config.rs  db.rs  jwt.rs  mod.rs
domain/: Cargo.toml
domain/src/: app_error.rs  lib.rs  prisma.rs
domain/src/users/: request.rs  response.rs  service.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20231111084338_add_user_model/: migration.sql
prisma/migrations/20231126055955_add_user_following/: migration.sql
prisma/migrations/20231128134217_article_models/: migration.sql
router/: Cargo.toml
router/src/: lib.rs
router/src/users/: router.rs
src/: app_error.rs  extractor.rs  lib.rs  main.rs
src/config/: app_config.rs  db.rs  jwt.rs  mod.rs
src/domain/articles/: mod.rs  request.rs  response.rs  service.rs
src/domain/profiles/: mod.rs  response.rs  service.rs
src/domain/tags/: mod.rs  service.rs
src/domain/users/: mod.rs  request.rs  response.rs  service.rs
src/router/: mod.rs
src/router/articles/: router.rs
src/router/profiles/: router.rs
src/router/tags/: router.rs
src/router/users/: router.rs
