[package]
name = "realworld-axum-prisma"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...' # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[workspace]
members = ["prisma-cli"]

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7.1", features = [] }
anyhow = "1.0.44"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
dotenv = "0.15.0"
metrics = "0.21.1"
argon2 = "0.5.2"

jsonwebtoken = "9.1.0"

env_logger = "0.10.1"
itertools = "0.11.0"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
