[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

[dependencies]
conduit-router = { path = "../router" }
conduit-domain = { path = "../domain" }

serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.6.20", features = [] }
anyhow = "1.0.44"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
