[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "conduit"

[dependencies]
conduit-router = { path = "../router" }
conduit-domain = { path = "../domain" }

serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6.20", features = [] }
anyhow = "1.0.44"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
dotenv = "0.15.0"
metrics = "0.21.1"

env_logger = "0.10.1"
itertools = "0.11.0"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
