[package]
name = "conduit-domain"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.6.20", features = [] }

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
