[package]
name = "conduit-domain"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.6.20", features = [] }

argon2 = "0.5.2"
hmac = "0.12.0"
sha2 = "0.10.8"
time = "0.3"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }

log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
anyhow = "1.0.44"
